admin style overflow fix

--- a/Frontend/src/pages/mainComponent/sidebar.css
+++ b/Frontend/src/pages/mainComponent/sidebar.css
@@ -162,7 +162,7 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-  width: 100vw;
+  max-width: 100vw;
   padding: 20px;
   min-height: 100vh;
   transition: all 0.3s;
